* copy changelog instead of symlinking    * hardlinks don't work in virtualbox    * symlinks are not allowed from launchpad

--- a/apache-couchdb/debian/Makefile
+++ b/apache-couchdb/debian/Makefile
@@ -5,6 +5,6 @@ all:
 
 karmic lucid maverick:
 
-	ln -f changelog.$@ changelog
+	cp changelog.$@ changelog
 	$(MAKE)
-	rm -f changelog
+	rm changelog
