--- a/apache-couchdb/debian/rules
+++ b/apache-couchdb/debian/rules
@@ -4,7 +4,7 @@
 export DH_VERBOSE=1
 
 PACKAGE_NAME=apache-couchdb
-COUCHDB_PREFIX=/usr/local
+COUCHDB_PREFIX=/usr
 SOURCE_DIR=.
 
 # we install into /usr/local but try to re-use the standard /etc and /var here
