--- a/apache-couchdb/debian/control
+++ b/apache-couchdb/debian/control
@@ -13,7 +13,8 @@ Standards-Version: 3.8.4
 Package: apache-couchdb
 Architecture: any
 Conflicts: couchdb
-Provides: couchdb
+Provides: couchdb, couchdb-bin
+Replaces: couchdb, couchdb-bin
 Depends: ${misc:Depends}, ${shlibs:Depends},
  ${erlang-base:Depends},  ${erlang-crypto:Depends}, ${erlang-eunit:Depends},
  ${erlang-inets:Depends}, ${erlang-xmerl:Depends}, ${erlang-abi:Depends},
