--- a/apache-couchdb/debian/rules
+++ b/apache-couchdb/debian/rules
@@ -50,10 +50,10 @@ override_dh_auto_configure:
 
 override_dh_auto_install:
 	#CFLAGS="$(CFLAGS)" $(MAKE) install INSTALL_ROOT=$(CURDIR)/debian/$(PACKAGE_NAME)
-	ifeq ($(shell lsb_release -cs), lucid)
-	  mkdir -p $(CURDIR)/debian/$(PACKAGE_NAME)/etc/ld.so.conf.d
-	  echo "# placeholder from installer" > $(CURDIR)/debian/$(PACKAGE_NAME)/etc/ld.so.conf.d/xulrunner.conf
-	endif
+ifeq ($(DIST), lucid)
+	mkdir -p $(CURDIR)/debian/$(PACKAGE_NAME)/etc/ld.so.conf.d
+	touch $(CURDIR)/debian/$(PACKAGE_NAME)/etc/ld.so.conf.d/xulrunner.conf
+endif
 	dh_auto_install -- INSTALL_ROOT=$(CURDIR)/debian/$(PACKAGE_NAME)
 
 override_dh_install:
