--- a/apache-couchdb/debian/control
+++ b/apache-couchdb/debian/control
@@ -20,5 +20,5 @@ Depends: ${misc:Depends}, ${shlibs:Depends},
  ${erlang-inets:Depends}, ${erlang-xmerl:Depends}, ${erlang-abi:Depends},
  erlang,
  adduser, libjs-jquery, lsb-base,
- ${xulrunner:Depends}
+ xulrunner-1.9.2 | xulrunner-2.0-mozjs | libmozjs-dev
 Description: This package provides Apache CouchDB
