* set sensible defaults (prefix and tests location)

--- a/testsuite/test.cfg
+++ b/testsuite/test.cfg
@@ -1,5 +1,5 @@
-COUCHDB_TEST_ETAP_PATH "<path_toward_this_directory>/tests"
-COUCHDB_TEST_PATH "/usr/local"
+COUCHDB_TEST_ETAP_PATH "./tests"
+COUCHDB_TEST_PATH "/usr"
 COUCHDB_TEST_LIB_PATH "lib/couchdb"
 COUCHDB_TEST_ETC_PATH "etc/couchdb"
 COUCHDB_TEST_SHARE_PATH "share/couchdb"
